--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,6 @@
 @import './base.css';
 @import 'bootstrap';
+@import 'bootstrap-icons/font/bootstrap-icons.css';
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
 body {
